syntax = "proto3";

package wiki;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "wiki/proto/wiki/v1";

// --- ENUMS ---

enum NodeType {
    TYPE_UNSPECIFIED = 0;
    TYPE_ARTICLE = 1;
    TYPE_NOTION = 2;
    TYPE_QUESTION = 3;
}

// --- CORE MODELS ---

message Node {
    int32 id = 1;
    optional int32 parent_id = 2;
    NodeType type = 3;
    int32 current_version_id = 4;
    int32 order_index = 5;

    // Data from the current version
    string title = 6;
    string content = 7;
    google.protobuf.Timestamp created_at = 8;
    int32 author = 9;

    optional google.protobuf.Struct metadata = 10;
}

// message Question {
//     Node node = 1;
//     google.protobuf.Struct metadata = 2;
// }

message Version {
    int32 version_id = 1;
    int32 node_id = 2;
    string title = 3;
    string content = 4;
    string status = 5; // pending, approved, rejected, archived
    google.protobuf.Timestamp created_at = 6;
    int32 author = 7;
    optional google.protobuf.Timestamp activated_at = 8;
    google.protobuf.Struct metadata = 9; // Only populated if type is question
}

message NodeBreadcrumb {
    int32 id = 1;
    string title = 2;
}

message Article {
    Node article_node = 1;
    repeated NodeBreadcrumb sub_articles = 2;
    repeated Node notions = 3;
    repeated Node questions = 4;
    repeated NodeBreadcrumb lineage = 5; // Parent hierarchy (Breadcrumbs)
    repeated string contributors = 6;    // List of authors from versions
}

// --- REQUESTS & RESPONSES ---

message CreateNodeRequest {
    optional int32 parent_id = 1;
    NodeType type = 2;
    string title = 3;
    string content = 4;
    int32 order_index = 5;
    google.protobuf.Struct metadata = 6; // Used if type is Question
}

message CreateArticleRequest {
    CreateNodeRequest article_node = 1;
    repeated CreateNodeRequest children = 2;
}

message UpdateNodeRequest {
    int32 node_id = 1;
    string title = 2;   // Optional: send new title
    string content = 3; // Optional: send new content
    google.protobuf.Struct metadata = 4;
}

message GetArticleRequest {
    int32 id = 1;
}

message GetHistoryRequest {
    int32 node_id = 1;
}

message GetHistoryResponse {
    repeated Version versions = 1;
}

message GetPendingRequest {
    int32 node_id = 1;
}

message GetAllPendingRequest {}

message PendingVersionsResponse {
    repeated Version versions = 1;
}

message ModerateVersionRequest {
    int32 version_id = 1;
}

message DeleteNodeRequest {
    int32 node_id = 1;
}

message GetRootArticlesRequest {
}

message GetRootArticlesResponse {
    repeated NodeBreadcrumb articles = 1;
}

message AssignParentRequest {
    int32 new_parent = 1;
    int32 child = 2;
}

message SearchRequest {
    string query = 1;
}

message SearchResponse {
    repeated NodeBreadcrumb results = 1;
}

message DeleteResponse {
    string message = 1;
}

// --- SERVICE DEFINITION ---

service WikiService {
    // Basic CRUD
    rpc GetRootArticles(GetRootArticlesRequest) returns (GetRootArticlesResponse);
    rpc CreateArticle(CreateArticleRequest) returns (Article);
    rpc CreateNode(CreateNodeRequest) returns (Node);
    rpc GetArticle(GetArticleRequest) returns (Article);
    rpc UpdateNode(UpdateNodeRequest) returns (Version); // Returns the 'pending' version
    rpc DeleteNode(DeleteNodeRequest) returns (DeleteResponse);

    rpc AssignParent(AssignParentRequest) returns (Node); //returns parent node breadcrumb?

    // History & Versioning
    rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);
    rpc GetPending(GetPendingRequest) returns (PendingVersionsResponse);
    rpc GetAllPending(GetAllPendingRequest) returns (PendingVersionsResponse);

    // Moderation
    rpc ApproveVersion(ModerateVersionRequest) returns (Node);
    rpc RejectVersion(ModerateVersionRequest) returns (Node);
    rpc SearchArticles(SearchRequest) returns (SearchResponse);
}
